--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "autoprefixer": "^10.4.16",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "prettier": "3.0.3",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
