--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-
+{
   "name": "todo-list",
   "version": "1.0.0",
   "description": "definitive todo-list",
@@ -7,7 +7,7 @@
     "serve": "ts-node ./server/server.ts",
     "dev:server": "ts-node-dev ./server/server.ts"
   },
-  "author": "",
+  "author": "matheus.skm@hotmail.com",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
@@ -26,7 +26,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.0",
     "htmx.org": "^1.9.6"
   }
 }
