feat: home page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "definitive todo-list",
   "scripts": {
-    "webpack": "webpack watch --mode development",
+    "bundler:watch": "webpack watch --mode development",
     "serve": "ts-node ./server/server.ts",
     "dev:server": "ts-node-dev ./server/server.ts"
   },
